--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Empréstimos - Login</title>
+    <title>Login - Gerenciador de Empréstimos</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
 </head>
 <body>
     <div class="container">
-        <div class="auth-section login-section active">
+        <div class="auth-section">
+            
+            <img src="logo.png" alt="Sua Logo" class="login-logo">
+            
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="input-group">
@@ -23,11 +25,10 @@
                     <input type="password" id="loginPassword" required>
                 </div>
                 <button type="submit" class="button">Entrar</button>
-                <p id="loginError" class="error-message"></p>
+                <p id="loginError" class="error-message" style="display: none;"></p>
             </form>
         </div>
-        </div>
-
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
