--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
 <body>
     <div class="dashboard-container">
         <header class="header">
+            <img src="logo.png" alt="Logo do Gerenciador de Empréstimos" class="app-logo"> 
             <h1>Meus Devedores</h1>
             <div class="header-actions">
                 <button id="addDebtorButton" class="button">Adicionar Novo Devedor</button>
