--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div class="container">
         <div class="auth-section login-section active">
+            <img src="logo.png" alt="Logo do Gerenciador de Empréstimos" class="login-logo"> 
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="input-group">
