--- a/dashboard.html
+++ b/dashboard.html
@@ -133,6 +133,7 @@
                     </div>
                     <button id="fillAmountButton" class="button button-secondary">Preencher Valor</button>
                     <button id="addPaymentButton" class="button">Adicionar Pagamento</button>
+                    <button id="showAllPaymentsButton" class="small-button" type="button">Exibir Todos</button>
                 </div>
             </div>
         </div>
@@ -142,3 +143,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
