--- a/dashboard.html
+++ b/dashboard.html
@@ -116,8 +116,11 @@
                         </label>
                     </div>
                 </div>
-
-                <h3>Pagamentos</h3>
+                
+                <div class="payments-header">
+                    <h3>Pagamentos</h3>
+                    <button id="showAllPaymentsButton" class="toggle-button" type="button">Exibir Todos</button>
+                </div>
                 <div id="paymentsGrid" class="payments-grid">
                     
 </div>
@@ -133,7 +136,6 @@
                     </div>
                     <button id="fillAmountButton" class="button button-secondary">Preencher Valor</button>
                     <button id="addPaymentButton" class="button">Adicionar Pagamento</button>
-                    <button id="showAllPaymentsButton" class="small-button" type="button">Exibir Todos</button>
                 </div>
             </div>
         </div>
@@ -143,4 +145,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
