--- a/dashboard.html
+++ b/dashboard.html
@@ -142,6 +142,18 @@
     </div>
 
     
+<div id="paymentsFullscreenModal" class="modal">
+    <div class="modal-content fullscreen-content">
+        <div class="payments-header">
+            <h3>Pagamentos</h3>
+            <span class="close-button" id="closePaymentsFullscreen">&times;</span>
+        </div>
+        <div id="paymentsGridFullscreen" class="payments-grid-fullscreen">
+            </div>
+    </div>
+</div>
+
+    
 <script src="script.js"></script>
 </body>
 </html>
