--- a/dashboard.html
+++ b/dashboard.html
@@ -53,6 +53,15 @@
                         <input type="number" id="loanedAmount" step="0.01" required>
                     </div>
 
+                    <div class="form-group">
+                        <label for="frequency">Frequência de Recebimento:</label>
+                        <select id="frequency" required>
+                        <option value="daily">Diário</option>
+                        <option value="weekly">Semanal</option>
+                        <option value="monthly">Mensal</option>
+                        </select>
+                    </div>
+
                     <div class="input-group">
                         <label for="calculationType">Tipo de Cálculo:</label>
                         <select id="calculationType">
@@ -142,3 +151,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
