--- a/dashboard.html
+++ b/dashboard.html
@@ -117,6 +117,7 @@
                     <p><strong>Parcelas:</strong> <span id="detailInstallments"></span></p>
                     <p><strong>Valor por Parcela:</strong> <span id="detailAmountPerInstallment"></span></p>
                     <p><strong>Data Início:</strong> <span id="detailStartDate"></span></p>
+                    <p><strong>Frequência:</strong> <span id="detailFrequency"></span></p>
                     <div class="toggle-switch">
                         <label for="toggleTotalToReceive">Esconder Total a Receber:</label>
                         <label class="switch">
@@ -151,4 +152,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
