--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,12 @@
         <p id="errorMessage" class="error-message" style="display: none;"></p>
 
         <div class="dashboard-content">
+            <div class="filter-actions">
+            <button id="filterAllButton" class="button">Todos</button>
+            <button id="filterDailyButton" class="button button-secondary">Diários</button>
+            <button id="filterWeeklyButton" class="button button-secondary">Semanais</button>
+            <button id="filterMonthlyButton" class="button button-secondary">Mensais</button>
+        </div>
             <div id="debtorsList" class="debtors-list">
                 <p class="loading-message">Carregando devedores...</p>
             </div>
@@ -152,5 +158,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
