--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
                         <input type="number" id="loanedAmount" step="0.01" required>
                     </div>
 
-                    <div class="form-group">
+                    <div class="input-group">
                         <label for="frequency">Frequência de Recebimento:</label>
                         <select id="frequency" required>
                         <option value="daily">Diário</option>
@@ -160,6 +160,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
