--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
                 
                 <!-- Linha com Tema + Sair -->
                 <div style="display: flex; gap: 10px;">
-                    <button id="themeToggleButton" class="theme-toggle-button" aria-label="Alternar tema">Alternar Tema</button>
+                    <button id="themeToggleButton" class="theme-toggle-button" aria-label="Tema">Alternar Tema</button>
                     <button id="logoutButton" class="button">Sair</button>
                 </div>
             </div>
@@ -159,4 +159,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
