--- a/dashboard.html
+++ b/dashboard.html
@@ -128,14 +128,17 @@
                 <p><strong>Valor por Parcela:</strong> <span id="detailAmountPerInstallment"></span></p>
                 <p><strong>Data Início:</strong> <span id="detailStartDate"></span></p>
                 <p><strong>Frequência:</strong> <span id="detailFrequency"></span></p>
-                <div class="toggle-switch" style="display: flex; align-items: center; gap: 10px;">
+                <div class="toggle-switch" style="display: flex; align-items: center; gap: 20px; margin-bottom: 10px;">
+                <div style="display: flex; align-items: center; gap: 5px;">
                     <label for="toggleTotalToReceive">Esconder Total a Receber:</label>
                     <label class="switch">
                     <input type="checkbox" id="toggleTotalToReceive">
                     <span class="slider round"></span>
                     </label>
-                <button id="showAllInstallmentsButton" class="button button-secondary" style="height: 30px; font-size: 12px;">Exibir Parcelas</button>
+                </div>
+            <button id="showAllInstallmentsButton" class="button button-secondary" style="height: 30px; font-size: 12px;">Exibir Parcelas</button>
             </div>
+
 
             </div>
 
@@ -161,6 +164,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
