--- a/dashboard.html
+++ b/dashboard.html
@@ -128,13 +128,15 @@
                 <p><strong>Valor por Parcela:</strong> <span id="detailAmountPerInstallment"></span></p>
                 <p><strong>Data Início:</strong> <span id="detailStartDate"></span></p>
                 <p><strong>Frequência:</strong> <span id="detailFrequency"></span></p>
-                <div class="toggle-switch">
-                    <label for="toggleTotalToReceive">Esconder Total a Receber:</label>
-                    <label class="switch">
-                        <input type="checkbox" id="toggleTotalToReceive">
-                        <span class="slider round"></span>
-                    </label>
-                </div>
+<div class="toggle-switch" style="display: flex; align-items: center; gap: 10px;">
+    <label for="toggleTotalToReceive">Esconder Total a Receber:</label>
+    <label class="switch">
+        <input type="checkbox" id="toggleTotalToReceive">
+        <span class="slider round"></span>
+    </label>
+    <button id="showAllInstallmentsButton" class="button button-secondary" style="height: 30px; font-size: 12px;">Exibir Parcelas</button>
+</div>
+
             </div>
 
     <div>
@@ -168,6 +170,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
