--- a/dashboard.html
+++ b/dashboard.html
@@ -159,5 +159,20 @@
 </div>
 
 <script src="script.js"></script>
+
+    <div id="fullScreenPaymentsModal" class="modal full-screen-modal">
+    <div class="modal-content">
+        <span class="close-button" id="closeFullScreenPaymentsModal">&times;</span>
+        <div class="modal-header">
+            <h2 id="fullScreenTitle">Detalhes de Parcelas</h2>
+        </div>
+        <div id="fullScreenPaymentsGrid" class="payments-grid">
+            </div>
+        <div class="button-group">
+            <button class="button" onclick="window.print()">Imprimir</button>
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
