--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Empréstimos - Dashboard</title>
+    <title>Russo Emprestimos - Dashboard</title>
     <link rel="stylesheet" href="style.css">
     
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -14,25 +14,52 @@
     <div class="dashboard-container">
         <header class="header">
             <img src="logo.png" alt="Logo do Gerenciador de Empréstimos" class="app-logo"> 
-            <h1>Meus Devedores</h1>
-            <div class="header-actions" style="display: flex; flex-direction: column; gap: 10px; align-items: flex-end;">
-                <button id="addDebtorButton" class="button">Adicionar Novo Devedor</button>
-                
-                <div style="display: flex; gap: 10px;">
-                    <button id="themeToggleButton" class="theme-toggle-button" aria-label="Tema"></button>
-                    <button id="logoutButton" class="button">Sair</button>
-                </div>
-            </div>
+            <h1>Seja Bem Vindo(a)</h1>
+<div class="header-actions" style="display: flex; align-items: center; gap: 10px;">
+  <button id="addDebtorButton" class="button">Adicionar Devedor</button>
+  
+  <div class="menu-container">
+      <button class="menu-toggle" id="menuToggleButton">⋮</button>
+      <div class="menu-dropdown" id="menuDropdown">
+          <button id="themeToggleButton" class="menu-item">Mudar Tema</button>
+          <button id="logoutButton" class="menu-item">Sair</button>
+      </div>
+  </div>
+</div>
         </header>
 
         <p id="errorMessage" class="error-message" style="display: none;"></p>
 
         <div class="dashboard-content">
+                        <!-- === NOVA DASHBOARD DE ESTATÍSTICAS === -->
+            <div class="stats-container">
+                <div class="stat-card">
+                    <p class="stat-title">Total Emprestado</p>
+                    <h2 id="totalLoanedAmount">R$ 0,00</h2>
+                </div>
+
+                <div class="stat-card">
+                    <p class="stat-title">Clientes Ativos</p>
+                    <h2 id="activeClients">0</h2>
+                </div>
+
+                <div class="stat-card">
+                    <div class="stat-header">
+                        <p class="stat-title">Total a Receber (Líquido)</p>
+                        <label class="switch small-switch">
+                            <input type="checkbox" id="toggleHideTotal">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                    <h2 id="totalToReceive">R$ 0,00</h2>
+                </div>
+            </div>
+            <!-- === FIM DASHBOARD DE ESTATÍSTICAS === -->
             <div class="filter-actions">
                 <button id="filterAllButton" class="button">Todos</button>
-                <button id="filterDailyButton" class="button button-secondary">Diários</button>
-                <button id="filterWeeklyButton" class="button button-secondary">Semanais</button>
-                <button id="filterMonthlyButton" class="button button-secondary">Mensais</button>
+                <button id="filterDailyButton" class="button button-secondary">Diario</button>
+                <button id="filterWeeklyButton" class="button button-secondary">Semanal</button>
+                <button id="filterMonthlyButton" class="button button-secondary">Mensal</button>
             </div>
             <div id="debtorsList" class="debtors-list">
                 <p class="loading-message">Carregando devedores...</p>
@@ -162,5 +189,10 @@
 
 </body>
 </html>
+
+
+
+
+
 
 
