--- a/clientes.html
+++ b/clientes.html
@@ -237,7 +237,7 @@
                     <i class="icon">📊</i>
                     <div>
                         <label>Parcelamento</label>
-                        <p><span id="infoParcelas">0</span>x de <span id="infoValorParcela">R$ 0,00</span></p>
+                        <p><span id="infoParcelas">0</span> de <span id="infoValorParcela">R$ 0,00</span></p>
                     </div>
                 </div>
             </div>
@@ -271,3 +271,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
