--- a/aviso.html
+++ b/aviso.html
@@ -18,9 +18,10 @@
         <button id="toggleSidebar" class="toggle-btn">☰</button>
         <nav class="sidebar-nav">
             <ul>
-                <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
+                <li><a href="inicio.html" class="active"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-                <li><a href="aviso.html" class="active"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>
+                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
+                <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
         </nav>
@@ -73,10 +74,14 @@
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-    <a href="aviso.html" class="nav-item">
+        <a href="funcionarios.html" class="nav-item">
+        <span class="icon">💼</span>
+        <span class="label">Repasse</span>
+    </a>
+<!--<a href="aviso.html" class="nav-item">
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
-    </a>
+    </a> -->
     <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
@@ -87,3 +92,4 @@
 </body>
 
 </html>
+
