--- a/funcionarios.html
+++ b/funcionarios.html
@@ -6,9 +6,9 @@
     <title>Russo - Repasse</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="clientes.css">
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 </head>
 <body>
 <div id="menuOverlay" class="menu-overlay"></div>
@@ -17,10 +17,9 @@
         <button id="toggleSidebar" class="toggle-btn">☰</button>
         <nav class="sidebar-nav">
             <ul>
-                <li><a href="inicio.html" class="active"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
+                <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
-                <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>
+                <li><a href="funcionarios.html" class="active"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
         </nav>
@@ -54,7 +53,7 @@
 
 <div id="modalPerfilFunc" class="modal">
     <div class="modal-content">
-        <h3>Criar Novo Repasse</h3>
+        <h3>Criar Novo Perfil de Repasse</h3>
         <input type="text" id="novoNomeFunc" placeholder="Ex: NEILI" style="width:100%; padding:10px; margin:15px 0; background:#2c2c2c; color:white; border:1px solid #444; border-radius:8px;">
         <button onclick="salvarPerfilFuncionario()" class="button">Criar Repasse</button>
         <button onclick="document.getElementById('modalPerfilFunc').style.display='none'" class="button button-secondary">Cancelar</button>
@@ -82,7 +81,7 @@
             </div>
             <div class="input-group">
                 <label>Tipo de Cálculo:</label>
-                <select id="calculationType">
+                <select id="calculationType" onchange="toggleCalcFields()">
                     <option value="perInstallment">Valor por Parcela</option>
                     <option value="percentage">Porcentagem de Juros</option>
                 </select>
@@ -93,15 +92,15 @@
                     <input type="number" id="amountPerInstallmentInput" step="0.01">
                 </div>
             </div>
-            <div class="input-group">
-                <label>Número de Parcelas:</label>
-                <input type="number" id="installments" required>
-            </div>
             <div id="percentageFields" style="display: none;">
                 <div class="input-group">
                     <label>Porcentagem de Juros (%):</label>
                     <input type="number" id="interestPercentageInput" step="0.01">
                 </div>
+            </div>
+            <div class="input-group">
+                <label>Número de Parcelas:</label>
+                <input type="number" id="installments" required>
             </div>
             <div class="input-group">
                 <label>Data de Início:</label>
@@ -129,49 +128,21 @@
     </div>
 </div>
 
-<div id="modalInformacoes" class="modal">
-    <div class="modal-content info-modal-main">
-        <div class="modal-header">
-            <h2 id="infoNomeCliente">Informações</h2>
-            <span class="close-button" onclick="document.getElementById('modalInformacoes').style.display='none'">&times;</span>
-        </div>
-        <div class="modal-body">
-            <div class="info-section financial-grid">
-                <div class="info-card"><label>Emprestado</label><span id="infoEmprestado" class="val-lent">R$ 0,00</span></div>
-                <div class="info-card"><label>Falta</label><span id="infoFalta" class="val-pending">R$ 0,00</span></div>
-            </div>
-            <div class="contract-details">
-                <div class="detail-item"><i>📅</i> <div><label>Início</label><p id="infoDataInicio">--</p></div></div>
-                <div class="detail-item"><i>📊</i> <div><label>Parcelas</label><p><span id="infoParcelas">0</span>x de <span id="infoValorParcela">R$ 0,00</span></p></div></div>
-            </div>
-        </div>
-    </div>
-</div>
-
 <nav class="mobile-nav">
-    <a href="inicio.html" class="nav-item">
-        <span class="icon">🏠</span>
-        <span class="label">Início</span>
-    </a>
-    <a href="clientes.html" class="nav-item">
-        <span class="icon">👥</span>
-        <span class="label">Clientes</span>
-    </a>
-        <a href="funcionarios.html" class="nav-item">
-        <span class="icon">💼</span>
-        <span class="label">Repasse</span>
-    </a>
-<!--<a href="aviso.html" class="nav-item">
-        <span class="icon">🔔</span>
-        <span class="label">Avisos</span>
-    </a> -->
-    <a href="perfil.html" class="nav-item">
-        <span class="icon">👤</span>
-        <span class="label">Perfil</span>
-    </a>
+    <a href="inicio.html" class="nav-item"><span class="icon">🏠</span><span class="label">Início</span></a>
+    <a href="clientes.html" class="nav-item"><span class="icon">👥</span><span class="label">Clientes</span></a>
+    <a href="funcionarios.html" class="nav-item active"><span class="icon">💼</span><span class="label">Repasse</span></a>
+    <a href="perfil.html" class="nav-item"><span class="icon">👤</span><span class="label">Perfil</span></a>
 </nav>
 
 <script src="js/funcionarios.js"></script>
+<script>
+    // Função simples para alternar os campos de cálculo no modal
+    function toggleCalcFields() {
+        const type = document.getElementById('calculationType').value;
+        document.getElementById('perInstallmentFields').style.display = type === 'perInstallment' ? 'block' : 'none';
+        document.getElementById('percentageFields').style.display = type === 'percentage' ? 'block' : 'none';
+    }
+</script>
 </body>
-
 </html>
