--- a/funcionarios.html
+++ b/funcionarios.html
@@ -20,7 +20,8 @@
             <ul>
                 <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-                <li><a href="funcionarios.html" class="active"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
+                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
+<!--            <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>  -->
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
         </nav>
@@ -123,3 +124,4 @@
 <script src="js/funcionarios.js"></script>
 </body>
 </html>
+
