--- a/funcionarios.html
+++ b/funcionarios.html
@@ -115,13 +115,30 @@
 </div>
 
 <nav class="mobile-nav">
-    <a href="inicio.html" class="nav-item"><span class="icon">🏠</span><span class="label">Início</span></a>
-    <a href="clientes.html" class="nav-item"><span class="icon">👥</span><span class="label">Clientes</span></a>
-    <a href="funcionarios.html" class="nav-item active"><span class="icon">💼</span><span class="label">Repasse</span></a>
-    <a href="perfil.html" class="nav-item"><span class="icon">👤</span><span class="label">Perfil</span></a>
+    <a href="inicio.html" class="nav-item">
+        <span class="icon">🏠</span>
+        <span class="label">Início</span>
+    </a>
+    <a href="clientes.html" class="nav-item">
+        <span class="icon">👥</span>
+        <span class="label">Clientes</span>
+    </a>
+        <a href="funcionarios.html" class="nav-item">
+        <span class="icon">💼</span>
+        <span class="label">Repasse</span>
+    </a>
+<!--<a href="aviso.html" class="nav-item">
+        <span class="icon">🔔</span>
+        <span class="label">Avisos</span>
+    </a> -->
+    <a href="perfil.html" class="nav-item">
+        <span class="icon">👤</span>
+        <span class="label">Perfil</span>
+    </a>
 </nav>
 
 <script src="js/funcionarios.js"></script>
 </body>
 </html>
+
 
