--- a/funcionarios.html
+++ b/funcionarios.html
@@ -20,8 +20,7 @@
             <ul>
                 <li><a href="inicio.html"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
-<!--            <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>  -->
+                <li><a href="funcionarios.html" class="active"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
         </nav>
@@ -47,6 +46,14 @@
             <h2 id="nomeFuncionarioSelecionado" style="color: var(--primary-color);"></h2>
             <button class="button" onclick="openAddModal()">+ Novo Repasse</button>
         </div>
+
+        <div class="filter-actions" style="margin: 15px 0; display: flex; gap: 8px; flex-wrap: wrap;">
+            <button class="button-filter active" onclick="setFiltroFreq('todos', this)" style="flex: 1; min-width: 80px;">TODOS</button>
+            <button class="button-filter" onclick="setFiltroFreq('daily', this)" style="flex: 1; min-width: 80px; border-left: 4px solid #2ecc71;">DIÁRIO</button>
+            <button class="button-filter" onclick="setFiltroFreq('weekly', this)" style="flex: 1; min-width: 80px; border-left: 4px solid #2ecc71;">SEMANAL</button>
+            <button class="button-filter" onclick="setFiltroFreq('monthly', this)" style="flex: 1; min-width: 80px; border-left: 4px solid #2ecc71;">MENSAL</button>
+        </div>
+
         <div id="repassesList" class="debtors-list"></div>
     </div>
 </div>
@@ -123,14 +130,10 @@
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-        <a href="funcionarios.html" class="nav-item">
+        <a href="funcionarios.html" class="nav-item active">
         <span class="icon">💼</span>
         <span class="label">Repasse</span>
     </a>
-<!--<a href="aviso.html" class="nav-item">
-        <span class="icon">🔔</span>
-        <span class="label">Avisos</span>
-    </a> -->
     <a href="perfil.html" class="nav-item">
         <span class="icon">👤</span>
         <span class="label">Perfil</span>
@@ -140,5 +143,3 @@
 <script src="js/funcionarios.js"></script>
 </body>
 </html>
-
-
