--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="inicio.html" class="active"><span class="icon">🏠</span> <span class="text">INÍCIO</span></a></li>
                 <li><a href="clientes.html"><span class="icon">👥</span> <span class="text">CLIENTES</span></a></li>
-                <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li>
+<!--            <li><a href="funcionarios.html"><span class="icon">💼</span> <span class="text">REPASSE</span></a></li> -->
 <!--            <li><a href="aviso.html"><span class="icon">🔔</span> <span class="text">AVISO</span></a></li>  -->
                 <li><a href="perfil.html"><span class="icon">👤</span> <span class="text">PERFIL</span></a></li>
             </ul>
@@ -76,10 +76,10 @@
         <span class="icon">👥</span>
         <span class="label">Clientes</span>
     </a>
-        <a href="funcionarios.html" class="nav-item">
+<!--        <a href="funcionarios.html" class="nav-item">
         <span class="icon">💼</span>
         <span class="label">Repasse</span>
-    </a>
+    </a> -->
 <!--<a href="aviso.html" class="nav-item">
         <span class="icon">🔔</span>
         <span class="label">Avisos</span>
@@ -94,5 +94,6 @@
 </body>
 
 </html>
+
 
 
